fix: (Form.Item) label and item not aligning correctly on Safari

--- a/src/components/form/form-item.less
+++ b/src/components/form/form-item.less
@@ -8,6 +8,7 @@
   &-label {
     display: block;
     height: 100%;
+    line-height: 1.5;
     box-sizing: border-box;
     color: #666;
     position: relative;
